# waseki

./: Cargo.toml  README.md
examples/: fibonacci.rs
src/: ar.rs  bops.rs  branched_list.rs  cs.rs  debug.rs  lib.rs  list.rs  list_machine.rs  ops.rs  r1cs.rs  rops.rs  state.rs  utils.rs  var.rs
src/ops/: assign.rs  binary.rs  mod.rs  sum.rs
src/tests/: blackbox.rs  hash.rs  mod.rs  only_collect_witness.rs  utils.rs  x_op_y.rs
src/utils/: pow.rs
tests/: var.rs
