[package]
name = "waseki"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = {version = "3.19.0", features = ["collections"]}
num-traits = "0.2.19"

[dev-dependencies]
stark-rings = { git = "https://github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
cyclotomic-rings = { git = "https://github.com/NethermindEth/latticefold.git", package = "cyclotomic-rings" , default-features = false}
ark-crypto-primitives = { version = "0.5.0", features = ["sponge", "r1cs"] }
ark-ff = "0.5.0"
ark-bn254 = "0.5.0"

