[package]
name = "waseki"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = "0.2.19"

[dev-dependencies]
stark-rings = { git = "https://github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
cyclotomic-rings = { git = "https://github.com/NethermindEth/latticefold.git", package = "cyclotomic-rings" , default-features = false}
ark-crypto-primitives = { version = "0.5.0", features = ["sponge", "r1cs"] }

ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-relations = "0.5.1"
ark-std = "0.5.0"
rand_core = "0.9.3"
ark-grumpkin = { version = "0.5.0", features = ["r1cs"] }
nest_struct = "0.5.4"
